crates/toml_edit/tests/fixtures/invalid/table-array-implicit.stderr
TOML parse error at line 13, column 1
   |
13 | [[albums]]
   | ^
Invalid table header
Duplicate key `albums` in document root
